# django-morph

./: .gitignore  CHANGELOG.md  DOCS.md  LICENSE  MANIFEST.in  README.md  llm.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
demo/demo/: settings.py  urls.py
demo/tasks/: admin.py  forms.py  models.py  urls.py  views.py
demo/tasks/management/commands/: seed_tasks.py
demo/tasks/migrations/: 0001_initial.py
demo/tasks/templates/tasks/: base.html  demo_home.html  task_board.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
django_morph/: apps.py  checks.py  middleware.py  test.py
django_morph/static/django_morph/: idiomorph.js  morph-client.js  morph-client.min.js
django_morph/templatetags/: morph_tags.py
testproject/: settings.py  urls.py
testproject/testapp/: models.py  urls.py  views.py
testproject/testapp/migrations/: 0001_initial.py
testproject/testapp/templates/testapp/: about.html  anchors.html  base.html  bootstrap.html  charts.html  contact.html  feed.html  forms.html  index.html  items.html  js_test.html  live.html  long_page.html  partial_content.html  partial_full.html  partial_target.html  success.html  tailwind.html  widgets.html
tests/: test_checks.py  test_middleware.py  test_templatetags.py  test_views.py
tests/e2e/: auto-preserved.spec.js  form-submission.spec.js  hash-links.spec.js  morph-navigation.spec.js  partial-targets.spec.js  playwright.config.js  preserved-elements.spec.js  script-ordering.spec.js  scroll-restoration.spec.js
