[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-morph"
version = "0.1.0"
description = "Transform Django into a seamless SPA-like experience using Idiomorph for DOM patching."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
]

[project.packages.find]
include = ["django_morph*"]
